--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
   "name": "zapdrop",
   "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
+  "framework": "nextjs",
   "env": {
     "NODE_ENV": "production"
   },
